--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "date-fns": "^1.28.5",
     "prop-types": "^15.6.0",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
+    "react-s-alert": "^1.3.1",
     "react-scripts": "1.0.14",
     "socket.io-client": "^2.0.3"
   },
